Fix .main-nav width (250->262) to fix issue on mobile where both logos were visible

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -305,7 +305,7 @@
 }
 
 .main-nav {
-  width: 250px;
+  width: 262px;
 
   @include media-breakpoint-up(md) {
     font-size: $janus-font-size-small;
